--- a/src/style.css
+++ b/src/style.css
@@ -27,16 +27,43 @@ body {
   padding-right: 0;
 }
 
-.map-feature {
+.map__view {
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   width: 100%;
   height: 100%;
 }
 
-.map__view {
+.map-feature {
   box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
   width: 100%;
   height: 100%;
+  padding: 16px 24px;
+}
+
+.weather-content {
+  padding: 8px 0;
+  font-size: 1.2rem;
+  font-weight: bold;
+  color: #3e3e3e;
+}
+
+.weather-content__item-wrapper {
+  display: flex;
+  align-items: center;
+}
+/* .weather-content__description {
+  display: inline;
+}
+
+.weather-content__icon {
+  display: inline;
+} */
+
+.weather-content__label {
+  padding-bottom: 4px;
+  font-size: .85rem;
+  font-weight: bold;
+  color: #5e5e5e;
 }
 
 @media screen and (max-width: 1200px) {
